--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,10 @@ body {
   color: rgba(255, 255, 255, 1);
 }
 
+.hidden {
+  display: none;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
